--- a/ProjetPi/src/sample/GestionOffre/view/interface.fxml
+++ b/ProjetPi/src/sample/GestionOffre/view/interface.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane style="-fx-background-radius: 20;" stylesheets="@../css/fullpackstyling.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.interfaceCont">
+<AnchorPane style="-fx-background-radius: 20;" stylesheets="" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GestionOffre.controller.interfaceCont">
     <children>
         <AnchorPane prefHeight="616.0" prefWidth="993.0" style="-fx-background-color: #030307; -fx-background-radius: 15;">
             <children>
